--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <h1>Выберите вопрос:</h1>
+    <h3>Ящик Пандоры</h3>
     <p id="question"></p>
     <button onclick="getRandomQuestion()">Выбрать вопрос</button>
     <button onclick="resetQuestions()">Сбросить</button>
@@ -130,7 +130,7 @@
       var usedQuestions = [];
       var buttonNames = [
         "С Благодарностью",
-        "От Смита",
+        "от Смита",
         "С Любовью"
       ];
       var currentButtonNameIndex = 0;
