--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <head>
     <meta charset="UTF-8">
     <title>Выбор случайного вопроса</title>
@@ -12,9 +13,14 @@
         margin-top: 2em;
       }
       button {
-        font-size: 1.2em;
-        margin: 1em;
-        padding: 0.5em 1em;
+       button {
+  font-size: 1.5em;
+  margin: 1em;
+  padding: 0.5em 1em;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+}
       }
     </style>
   </head>
